2009/08/06 3.2.21
- Too large padding on first grid cells
- Move e-mail to another IMAP account.

2009/08/06 3.2.20
- Function to clean invalid UTF-8 strings that caused unreadable e-mails
- Updated Norsk translation
- Added custom fields functions to users
- Compatible with 5.3. There are still a lot of deprecation warnings though.
- Fixed destroyed htmleditor in e-mail composer when it was collapsed

2009/08/04 3.2.19
- Invalid iconv call bug on attachments
- Updated Czech

2009/08/04 3.2.18
- Time registration column header bug
- Windows compatibility with Open-Office templates

2009/07/29 3.2.17
- Problem with search query for contacts

2009/07/29 3.2.16
- Upgrade to ExtJS 2.3
- Confirmation e-mail added to web form processing
- Better SMTP error reporting in e-mail
- Override newsletter mailing smtp server to always use a specific e-mail server
	for mailings.
- Smarter search function in projects

2009/07/28 3.2.15
- Automatically sync filesystem with files database for easier external access
	of files.
- Fixed some issues in preparation to move to ExtJS 3
- E-mail filter bug. Adding a filter to a second account failed.
- Updated German, Czech and French translation
- Added Norwegian Bokmål translation
- Other bug fixes
- Debianized the package.

2009/07/10 3.02-stable-12
- IMAP auth module was broken
- Read notification didn't send correct alias
- Alarm sound didn't play anymore
- File templates bug
- Project template bug

2009/07/09 3.02-stable-9
- License check for pro version was still in the comments module.

2009/07/08 3.02-stable-8
- Moved comments to Community version
- Bug fixes

2009/07/07 3.02-stable-5
- Project templates extended with subprojects and tasks
- A responsible user can be selected at a project and you can filter on that.
- Script to sync files with the filesystem was added.
- Changed lost password procedure. Now an e-mail is sent with a link to click on
	where the user can change the password. This method is more secure because